--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ bower_components
 build/Release
 
 # Dependency directories
+client/node_modules/
+server/node_modules/
 node_modules/
 jspm_packages/
 
@@ -69,6 +71,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
+server/.env
 .env
 .env.test
 
